--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ div {
     border: 100px solid black; 
 } 
    
-form {                                         
+div {                                         
     margin: 0 auto; 
     width: 600px;
     text-align: center;
@@ -13,13 +13,18 @@ form {
     background-color: aliceblue;
 }
 
-form>p{
+div>p{
     display: flex;
     flex-direction: row;
     justify-content: center;
 
 }
 input{
+    width: 300px;
+    margin-left: 2%;
+    float: inline-end;
+}
+button{
     width: 300px;
     margin-left: 2%;
     float: inline-end;
